--- a/config/tiny_mce.yml
+++ b/config/tiny_mce.yml
@@ -8,10 +8,11 @@ theme_advanced_toolbar_align : "left"
 width : "500"
 height : "300"
 
-theme_advanced_blockformats : "p,h1,h2,h3,h4,h5,h6"
+#theme_advanced_blockformats : "p,h1,h2,h3,h4,h5,h6"
 
 
-theme_advanced_buttons1 : "formatselect,bold,italic,separator,bullist,numlist,separator,outdent,indent,separator,link,unlink,separator,justifyleft,justifycenter,justifyright"
+#theme_advanced_buttons1 : "formatselect,bold,italic,separator,bullist,numlist,separator,outdent,indent,separator,link,unlink,separator,justifyleft,justifycenter,justifyright"
+theme_advanced_buttons1 : "bold,italic,separator,bullist,numlist,separator,outdent,indent,separator,link,unlink,separator,justifyleft,justifycenter,justifyright"
 theme_advanced_buttons2 : ""
 theme_advanced_buttons3 : ""
 
