--- a/config/database.yml
+++ b/config/database.yml
@@ -38,7 +38,7 @@ test:
   socket: /tmp/mysql.sock
 
 production:
-  adapter: mysql
+  adapter: mysql2
   encoding: utf8
   reconnect: false
   database: marselistvaervej4_production
